fixed the alignment in the style.css page

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
  h1, h2{
     color: white;
     font-size: 30px;
-    text-align: start;
+    text-align: center;
  }
 
  article > h1, article > p {
